gobmkida/g3/store_persistent_owl_cache
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/store_persistent_owl_cache/src/engine/persistent.c:1300:4: error: use of undeclared identifier 'byte_A2CADF'
|| byte_A2CADF[v26] != 3 && ( v19 = ( unsigned int)v25[19], ( _DWORD)v19 == v24) 
   ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/store_persistent_owl_cache/src/obj/1/persistent.o] Error 1
